just two exceptions left in refactoring